launch.jsonにRecipeSearchAppとNasaApodViewerWithDateの構成を追加し、OpenWeatherMap関連のクラスを統合。日記機能を改善し、共有機能を追加。